[package]
name = "nearest_neighbor"
version = "0.1.0"
edition = "2021"
default-run = "nearest_neighbor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = {version="3.2.2", features=["derive"]}
serde = {version="1.0.141", features=["derive"]}
serde_json = "1.0.82"
mongodb = "2.3.0"
tokio = "1.19.2"
loadenv = "0.1.4"
bson = "2.3.0"
futures = "0.3.21"