[package]
name = "nearest_neighbor"
version = "0.1.0"
edition = "2021"
default-run = "nearest_neighbor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.1"
clap = {version="4.5.39", features=["derive"]}
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
mongodb = "2.6.1"
tokio = "1.19.2"
loadenv = "0.1.4"
bson = "2.15.0"
futures = "0.3.27"